--- a/css/jinbo.ui.css
+++ b/css/jinbo.ui.css
@@ -142,11 +142,11 @@ table { border-collapse: collapse;border-spacing: 0;}
 }
 .ui-btn {
 	margin: 0 auto;
-	height: 40px;
+	height: 38px;
 	border: 1px solid #999;
 	background: #fff;
 	color: #333;
-	line-height: 40px;
+	line-height: 38px;
 	font-size: 16px;
 	text-align: center;
 	outline: none;
@@ -158,7 +158,7 @@ table { border-collapse: collapse;border-spacing: 0;}
 				flex: 1;
 }
 .ui-btn-group .ui-btn:not(:last-child) {
-	margin-right: 8px;
+	margin-right: 12px;
 }
 
 .ui-dialog-title {
@@ -209,3 +209,23 @@ table { border-collapse: collapse;border-spacing: 0;}
 }
 
 
+.fadeOut {
+	-webkit-animation: fadeOut .3s forwards;
+			animation: fadeOut .3s forwards;
+}
+@-webkit-keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes fadeOut {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
